<resources>
    <string-array name="languages_array">
        <item>English</item>
        <item>Ukrainian</item>
        <item>Polish</item>
    </string-array>

    <string name="app_name">Pet Tracker</string>
    <string name="neutered_male">Neutered</string>
    <string name="neutered_female">Neutered</string>
    <string name="not_neutered_male">Not Neutered</string>
    <string name="not_neutered_female">Not Neutered</string>
    <string name="basic_information">Basic Information</string>
    <string name="other_information">Other Information</string>
    <string name="last_vet_visit">Last Vet Visit</string>
    <string name="favorite_snack">Favorite Snack</string>
    <string name="favorite_activity">Favorite Activity</string>
    <string name="outdoor">Outdoor</string>
    <string name="human_age">Human Age</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_custom_field">Add Custom Field</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="name">Name</string>
    <string name="breed">Breed</string>
    <string name="color">Color</string>
    <string name="name_placeholder">Snuggles</string>
    <string name="breed_placeholder">Tabby</string>
    <string name="color_placeholder">Gray</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="vet_visit">Vet Visit</string>
    <string name="medication">Medication</string>
    <string name="vaccine">Vaccine</string>
    <string name="surgery">Surgery</string>
    <string name="weight">Weight</string>
    <string name="create_category">Create Category</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="done">Done</string>
    <string name="no_pet_added">You have not added any pet profiles yet, click the \"add\" button to add a new pet</string>
    <string name="date">Date</string>
    <string name="create_new_pet">Create a new pet</string>
    <string name="indoor">Indoor</string>
    <string name="settings">Settings</string>
    <string name="october">October</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="register"><u>Register</u></string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="logs">Logs</string>
    <string name="create_new_log">Create New Log</string>
    <string name="log_name">Name</string>
    <string name="delete_category_prompt">Are you sure you want to delete this category?</string>
    <string name="this_action_cannot_be_undone">This action cannot be undone</string>
    <string name="delete_log_prompt">Are you sure you want to delete this log?</string>
    <string name="new_category">New Category</string>
    <string name="new_log">New Log</string>
    <string name="save">Save</string>
    <string name="descrption">Description</string>
    <string name="delete_pet_profile_prompt">Are you sure you want to delete this pet profile?</string>
    <string name="vaccines">Vaccines</string>
    <string name="surgeries">Surgeries</string>
    <string name="vet_visits">Vet Visists</string>
</resources>