<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background"
    android:foregroundTint="#FFFFFF">

    <TextView
        android:id="@+id/create_new_pet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/create_new_pet"
        android:textAlignment="center"
        android:textColor="@color/text_color_primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/go_back_button"
        android:layout_width="20dp"
        android:layout_height="23.33dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_left_solid" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_new_pet_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/add_pet_done_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/primary_button"
                android:fontFamily="sans-serif"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/white_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_pick_button" />

            <Button
                android:id="@+id/date_pick_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_new_pet"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="15dp"
                android:text="@string/date_of_birth"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_pick_text" />

            <TextView
                android:id="@+id/date_pick_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_of_birth"
                android:textColor="@color/text_color_primary"
                app:layout_constraintStart_toStartOf="@+id/date_pick_button"
                app:layout_constraintTop_toBottomOf="@+id/neutered_group" />

            <ImageView
                android:id="@+id/pet_profile_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/image_circle"
                android:paddingHorizontal="30dp"
                android:paddingVertical="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/paw_solid"
                tools:srcCompat="@drawable/paw_solid" />

            <ImageView
                android:id="@+id/add_profile_picture"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/add_image_circle"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/pet_profile_picture"
                app:layout_constraintEnd_toEndOf="@+id/pet_profile_picture"
                app:srcCompat="@drawable/plus_solid" />

            <TextView
                android:id="@+id/pet_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/name"
                android:textColor="@color/text_color_primary"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/name_input"
                app:layout_constraintTop_toBottomOf="@+id/pet_profile_picture" />

            <TextView
                android:id="@+id/pet_breed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/breed"
                android:textColor="@color/text_color_primary"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/breed_input"
                app:layout_constraintTop_toBottomOf="@+id/name_input" />

            <TextView
                android:id="@+id/pet_color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/color"
                android:textColor="@color/text_color_primary"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/color_input"
                app:layout_constraintTop_toBottomOf="@+id/breed_input" />

            <EditText
                android:id="@+id/name_input"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_new_pet"
                android:hint="@string/name_placeholder"
                android:inputType="text|textCapWords"
                android:paddingHorizontal="15dp"
                android:singleLine="true"
                android:textColor="@color/text_color_primary"
                android:textColorHint="@color/secondary"
                android:textCursorDrawable="@null"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pet_name_text" />

            <EditText
                android:id="@+id/breed_input"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_new_pet"
                android:hint="@string/breed_placeholder"
                android:inputType="text|textCapWords"
                android:paddingHorizontal="15dp"
                android:singleLine="true"
                android:textColor="@color/text_color_primary"
                android:textColorHint="@color/secondary"
                android:textCursorDrawable="@null"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pet_breed_text" />

            <EditText
                android:id="@+id/color_input"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_new_pet"
                android:hint="@string/color_placeholder"
                android:inputType="text|textCapWords"
                android:paddingHorizontal="15dp"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/text_color_primary"
                android:textColorHint="@color/secondary"
                android:textCursorDrawable="@null"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pet_color_text" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/color_input">

                <RadioButton
                    android:id="@+id/male_radio_button"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/text_color_primary"
                    android:text="@string/male"
                    android:textColor="@color/text_color_primary" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/mars_solid" />

                <RadioButton
                    android:id="@+id/female_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:buttonTint="@color/text_color_primary"
                    android:text="@string/female"
                    android:textColor="@color/text_color_primary" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/venus_solid" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

                <RadioButton
                    android:id="@+id/indoor_radio_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/text_color_primary"
                    android:text="@string/indoor"
                    android:textColor="@color/text_color_primary" />

                <RadioButton
                    android:id="@+id/outdoor_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="0dp"
                    android:buttonTint="@color/text_color_primary"
                    android:text="@string/outdoor"
                    android:textColor="@color/text_color_primary" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/neutered_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup">

                <RadioButton
                    android:id="@+id/neutered_radio_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:buttonTint="@color/text_color_primary"
                    android:text="@string/neutered_male"
                    android:textColor="@color/text_color_primary" />

                <RadioButton
                    android:id="@+id/not_neutered_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="0dp"
                    android:buttonTint="@color/text_color_primary"
                    android:text="@string/not_neutered_male"
                    android:textColor="@color/text_color_primary" />

            </RadioGroup>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/date_pick_button"
                app:layout_constraintEnd_toEndOf="@+id/date_pick_button"
                app:layout_constraintTop_toTopOf="@+id/date_pick_button"
                app:srcCompat="@drawable/calendar_check_regular" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>